@@ -167,12 +167,7 @@ public:
             m_combo->SetText(wxEmptyString);
         }
 
-        m_currentDate = date;
-    }
-
-    const wxDateTime& GetDateValue() const
-    {
-        return m_currentDate;
+        SetDate(date);
     }
 
     bool ParseDateTime(const wxString& s, wxDateTime* pDt)
@@ -217,39 +212,37 @@ private:
 
     void OnSelChange(wxCalendarEvent &ev)
     {
-        m_currentDate = wxCalendarCtrl::GetDate();
-        m_combo->SetText(m_currentDate.Format(m_format));
+        m_combo->SetText(GetDate().Format(m_format));
 
         if ( ev.GetEventType() == wxEVT_CALENDAR_DOUBLECLICKED )
         {
             Dismiss();
         }
 
-        SendDateEvent(m_currentDate);
+        SendDateEvent(GetDate());
     }
 
     void OnKillTextFocus(wxFocusEvent &ev)
     {
         ev.Skip();
 
+        const wxDateTime& dtOld = GetDate();
+
         wxDateTime dt;
         wxString value = m_combo->GetValue();
         if ( !ParseDateTime(value, &dt) )
         {
             if ( !HasDPFlag(wxDP_ALLOWNONE) )
-                dt = m_currentDate;
+                dt = dtOld;
         }
 
-        if ( dt.IsValid() )
-            m_combo->SetText(dt.Format(m_format));
-        else
-            m_combo->SetText(wxEmptyString);
+        m_combo->SetText(GetStringValueFor(dt));
 
         // notify that we had to change the date after validation
-        if ( (dt.IsValid() && (!m_currentDate.IsValid() || m_currentDate != dt)) ||
-                (!dt.IsValid() && m_currentDate.IsValid()) )
+        if ( (dt.IsValid() && (!dtOld.IsValid() || dt != dtOld)) ||
+                (!dt.IsValid() && dtOld.IsValid()) )
         {
-            m_currentDate = dt;
+            SetDate(dt);
             SendDateEvent(dt);
         }
     }
@@ -319,8 +312,8 @@ private:
             m_combo->SetValidator(tv);
     #endif
 
-            if (m_currentDate.IsValid())
-                m_combo->SetText(m_currentDate.Format(m_format));
+            if ( GetDate().IsValid() )
+                m_combo->SetText(GetDate().Format(m_format));
         }
 
         return true;
@@ -330,24 +323,31 @@ private:
     {
         wxDateTime dt;
         if ( ParseDateTime(s, &dt) )
-            m_currentDate = dt;
+            SetDate(dt);
         else if ( HasDPFlag(wxDP_ALLOWNONE) )
-            m_currentDate = dt;
+            SetDate(wxInvalidDateTime);
+        //else: !wxDP_ALLOWNONE, keep the old value
     }
 
     virtual wxString GetStringValue() const
     {
-        if ( !m_currentDate.IsValid() ) 
-            return wxEmptyString;
-
-        return m_currentDate.Format(m_format);
+        return GetStringValueFor(GetDate());
     }
 
 private:
+    // returns either the given date representation using the current format or
+    // an empty string if it's invalid
+    wxString GetStringValueFor(const wxDateTime& dt) const
+    {
+        wxString val;
+        if ( dt.IsValid() )
+            val = dt.Format(m_format);
+
+        return val;
+    }
 
     wxSize          m_useSize;
     wxString        m_format;
-    wxDateTime      m_currentDate;
 
     DECLARE_EVENT_TABLE()
 };
@@ -408,14 +408,13 @@ bool wxDatePickerCtrlGeneric::Create(wxWindow *parent,
     m_combo->SetCtrlMainWnd(this);
 
     m_popup = new wxCalendarComboPopup();
+    m_cal = m_popup;
 
 #if defined(__WXMSW__)
     // without this keyboard navigation in month control doesn't work
     m_combo->UseAltPopupWindow();
 #endif
     m_combo->SetPopupControl(m_popup);
-
-    m_cal = m_popup;
 
     m_popup->SetDateValue(date.IsValid() ? date : wxDateTime::Today());
 
@@ -428,8 +427,8 @@ bool wxDatePickerCtrlGeneric::Create(wxWindow *parent,
 void wxDatePickerCtrlGeneric::Init()
 {
     m_combo = NULL;
-    m_cal = NULL;
     m_popup = NULL;
+    m_cal = NULL;
 }
 
 wxDatePickerCtrlGeneric::~wxDatePickerCtrlGeneric()
@@ -442,8 +441,8 @@ bool wxDatePickerCtrlGeneric::Destroy()
         m_combo->Destroy();
 
     m_combo = NULL;
-    m_cal = NULL;
     m_popup = NULL;
+    m_cal = NULL;
 
     return wxControl::Destroy();
 }
@@ -465,13 +464,13 @@ bool
 wxDatePickerCtrlGeneric::SetDateRange(const wxDateTime& lowerdate,
                                       const wxDateTime& upperdate)
 {
-    return m_cal->SetDateRange(lowerdate, upperdate);
+    return m_popup->SetDateRange(lowerdate, upperdate);
 }
 
 
 wxDateTime wxDatePickerCtrlGeneric::GetValue() const
 {
-    return m_popup->GetDateValue();
+    return m_popup->GetDate();
 }
 
 
@@ -484,9 +483,9 @@ void wxDatePickerCtrlGeneric::SetValue(const wxDateTime& date)
 bool wxDatePickerCtrlGeneric::GetRange(wxDateTime *dt1, wxDateTime *dt2) const
 {
     if (dt1)
-        *dt1 = m_cal->GetLowerDateLimit();
+        *dt1 = m_popup->GetLowerDateLimit();
     if (dt2)
-        *dt2 = m_cal->GetUpperDateLimit();
+        *dt2 = m_popup->GetUpperDateLimit();
     return true;
 }
 
@@ -494,7 +493,7 @@ bool wxDatePickerCtrlGeneric::GetRange(wxDateTime *dt1, wxDateTime *dt2) const
 void
 wxDatePickerCtrlGeneric::SetRange(const wxDateTime &dt1, const wxDateTime &dt2)
 {
-    m_cal->SetDateRange(dt1, dt2);
+    m_popup->SetDateRange(dt1, dt2);
 }
 
 // ----------------------------------------------------------------------------
